apps/hasura/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasura
spec:
  replicas: 1
  selector:
    matchLabels:
      io.apisnoop.graphql: hasura
  template:
    metadata:
      labels:
        io.apisnoop.graphql: hasura
    spec:
      restartPolicy: Always
      containers:
      - name: hasura
        image: "raainbow/hasura:v2020.04.08-1"
        ports:
        - containerPort: 8080
