apps/hasura/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasura
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    io.apisnoop.graphql: hasura
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
