apps/hasura/deployment/graphql-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: graphql-ingress
spec:
  rules:
  - http:
      paths:
      - path: /v1
        backend:
          serviceName: hasura
          servicePort: 8080
