apps/hasura/deployment/ingress.yaml
# ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hasura-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-prod-apisnoop
spec:
  rules:
  - host: hasura.localho.st
    http:
      paths:
      - path: /
        backend:
          serviceName: hasura
          servicePort: 8080
